--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -22,4 +22,7 @@ body {
   line-height: 1.6;
 
   background-color: var(--color-light-grayish-blue);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
