--- a/sass/main.css
+++ b/sass/main.css
@@ -45,7 +45,7 @@ body {
 
 .container {
   width: 80%;
-  height: 600px;
+  height: 620px;
   display: -ms-grid;
   display: grid;
   -ms-flex-line-pack: center;
@@ -55,18 +55,21 @@ body {
           justify-content: center;
   -ms-grid-columns: (1fr)[4];
       grid-template-columns: repeat(4, 1fr);
-  -ms-grid-rows: (1fr)[2];
-      grid-template-rows: repeat(2, 1fr);
+  -ms-grid-rows: (minmax(200px, 50%))[2];
+      grid-template-rows: repeat(2, minmax(200px, 50%));
       grid-template-areas: "wide-1 wide-1 short-1 side" "short-2 wide-2 wide-2 side";
-  grid-column-gap: 30px;
+  grid-column-gap: 25px;
   grid-row-gap: 25px;
 }
 
 .box {
-  background-color: orangered;
-  font-size: 1.8rem;
-  padding: 1.5rem 2rem;
-  border-radius: 3%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .box--1, .box--2, .box--5 {
@@ -107,5 +110,58 @@ body {
   -ms-grid-column-span: 2;
   grid-area: wide-2;
   background-color: var(--color-dark-blackish-blue);
+}
+
+.box {
+  font-size: 1.8rem;
+  padding: 2rem 3.2rem;
+  border-radius: 3%;
+}
+
+.client-info {
+  display: -ms-grid;
+  display: grid;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  height: 50px;
+  -ms-grid-columns: 55px max-content;
+      grid-template-columns: 55px -webkit-max-content;
+      grid-template-columns: 55px max-content;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+}
+
+.client-info__image {
+  grid-row: 1 / -1;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 40px;
+  border-radius: 50%;
+  border: 2px solid var(--color-light-grayish-blue);
+}
+
+.client-info__name {
+  font-size: 1.6rem;
+}
+
+.client-info__position {
+  font-size: 1.4rem;
+  -webkit-transform: translateY(-0.5rem);
+          transform: translateY(-0.5rem);
+}
+
+.title {
+  font-size: 2.1rem;
+  font-weight: 600;
+  line-height: 1.2;
+  margin: 1rem 0;
+}
+
+.details {
+  font-size: 1.4rem;
+  line-height: 1.4;
+  margin: 0.5rem 0;
 }
 /*# sourceMappingURL=main.css.map */
