--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -2,21 +2,6 @@
   font-size: 1.8rem;
   padding: 2rem 3.2rem;
   border-radius: 10px;
-
-  &--1 {
-  }
-
-  &--2 {
-  }
-
-  &--side {
-  }
-
-  &--4 {
-  }
-
-  &--5 {
-  }
 }
 
 .client-info {
@@ -33,7 +18,7 @@
 
     width: 40px;
     border-radius: 50%;
-    border: 2px solid var(--color-light-grayish-blue);
+    border: 2px solid var(--color-white-trans);
   }
 
   &__name {
@@ -42,7 +27,8 @@
 
   &__position {
     font-size: 1.4rem;
-    transform: translateY(-0.5rem);
+    font-weight: 500;
+    transform: translateY(-0.3rem);
   }
 }
 
@@ -50,11 +36,19 @@
   font-size: 2.1rem;
   font-weight: 600;
   line-height: 1.2;
-  margin: 1rem 0;
+  margin: 1.5rem 0;
 }
 
 .details {
   font-size: 1.4rem;
-  line-height: 1.4;
+  line-height: 1.5;
   margin: 0.5rem 0;
+}
+
+.trans-white {
+  color: var(--color-white-trans);
+}
+
+.trans-black {
+  color: var(--color-black-trans);
 }
