--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -32,7 +32,7 @@
   }
 
   @include respond(tablet-smallest) {
-    width: 90%;
+    width: 89%;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(5, minmax(1fr, max-content));
     grid-template-areas: "wide-1" "short-1" "short-2" "wide-2" "side";
@@ -49,7 +49,7 @@
     color: var(--color-white);
   }
 
-  &--3,
+  &--side,
   &--4 {
     color: var(--color-dark-grayish-blue);
   }
