--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,9 +1,11 @@
 :root {
   //primary
   --color-moderate-violet: hsl(263, 55%, 52%);
-  --color-dark-grayish-blue: hsl(217, 19%, 35%);
+  --color-dark-grayish-blue: rgb(72, 85, 106);
+  --color-black-trans: rgba(72, 85, 106, 0.767);
   --color-dark-blackish-blue: hsl(219, 29%, 14%);
   --color-white: hsl(0, 0%, 100%);
+  --color-white-trans: rgba(255, 255, 255, 0.76);
 
   //neutral
   --color-light-gray: hsl(0, 0%, 81%);
