--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -3,6 +3,7 @@
   padding: 2rem 3.2rem;
   border-radius: 10px;
   position: relative;
+  box-shadow: 2rem 2rem 2.5rem rgba(185, 185, 185, 0.226);
 
   &__bg {
     position: absolute;
