--- a/sass/main.css
+++ b/sass/main.css
@@ -165,6 +165,8 @@ body {
   padding: 2rem 3.2rem;
   border-radius: 10px;
   position: relative;
+  -webkit-box-shadow: 2rem 2rem 2.5rem rgba(185, 185, 185, 0.226);
+          box-shadow: 2rem 2rem 2.5rem rgba(185, 185, 185, 0.226);
 }
 
 .box__bg {
